[package]
name = "enso-channel"
version = "0.1.1"
edition = "2021"
authors = ["kradskymer<kradskymer@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "Batch-first, bounded, lock-free ring-buffer channels (MPSC/Fan-out) for bursty, latency-sensitive systems"
repository = "https://github.com/kradskymer/enso-channel"
homepage = "https://github.com/kradskymer/enso-channel"
documentation = "https://docs.rs/enso-channel"
readme = "README.md"
keywords = ["channel", "lock-free", "ring-buffer", "batch"]
categories = ["concurrency", "data-structures"]
rust-version = "1.75"

[dependencies]
thiserror = "2"
crossbeam-utils = "0.8.21"

[dev-dependencies]
criterion = "0.8.2"
paste = "1.0.15"
crossbeam-channel = "0.5.15"
core_affinity = "0.8"
hdrhistogram = "7.5.4"
rstest = "0.26.1"

[[bench]]
name = "spsc"
harness = false

[[bench]]
name = "mpsc"
harness = false

[[bench]]
name = "broadcast"
harness = false

[lints.rust]
unsafe_code = "warn"
